# llm-tools

./: create_table_bot.py  logs.txt  logs_09.txt  main.py  month_summary_bot.py  pyproject.toml  week_summary_bot.py
agents/chat_doc/: chat_doc.py
prompts/: __init__.py  code_generation.py  month_summary.py  week_summary.py  xhs_generator.py
tools/: getx_builder_tool.py
tools/home/: controller.dart  view.dart
utils/: __init__.py  markdown_util.py
